--- a/services/products/package.json
+++ b/services/products/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.5.2",
     "morgan": "^1.9.1",
     "winston": "^3.2.1"
   },
